logCompilacao.txt
MainClass.java:65: error: incompatible types: possible lossy conversion from double to float
                float xy = -2.5149975E21;
                           ^
MainClass.java:75: error: incompatible types: possible lossy conversion from double to float
        float fr = -6.7831855E14;
                   ^
2 errors
